--- a/app/src/main/res/layout-sw600dp/get_navigation_state_activity.xml
+++ b/app/src/main/res/layout-sw600dp/get_navigation_state_activity.xml
@@ -2,21 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_navigation_state"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:text="Hello World!"
         android:layout_marginTop="50dp"
-        android:paddingLeft="15dp"/>
+        android:paddingLeft="15dp"
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/btn_set_navigation_state"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
-        android:text="设置导航栏"/>
+        android:text="设置导航栏"
+        android:layout_weight="1"/>
 
 </LinearLayout>
